--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,3 +129,11 @@ footer {
     margin-top: 90px;
   }
 }
+
+/* Media query: laptop and larger (992px and up)*/
+@media screen and (min-width: 992px) {
+  /*Header*/
+  #menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+  }
+}
