--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,14 @@ hr {
   color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up)*/
+@media screen and (min-width: 576px) {
+  #photos {
+    column-count: 2;
+    column-gap: 0;
+  }
+}
+
 /* Media query: tablets and larger (768px and up)*/
 @media screen and (min-width: 768px) {
   /*Header*/
@@ -270,6 +278,12 @@ hr {
     text-align: end;
     align-self: flex-end;
   }
+
+  /*Gallery*/
+
+  #photos {
+    column-count: 3;
+  }
 }
 
 /* Media query: laptop and larger (992px and up)*/
@@ -277,6 +291,12 @@ hr {
   /*Header*/
   #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
+  }
+
+  /*Gallery*/
+
+  #photos {
+    column-count: 4;
   }
 
   /* Media query: laptop and larger (1200px and up)*/
